fixed "add-new" being too wide

--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ h1 {
     border: 2px dashed lightgrey;
     box-shadow: none;
     background-color: transparent;
+    max-width: 450px;
 }
 
 /* ==================================================================
